# open-api-framework

./: .git-blame-ignore-revs  .gitignore  .readthedocs.yaml  CHANGELOG.rst  CONTRIBUTING.md  MANIFEST.in  README.rst  pyproject.toml  pyright.pyproject.toml  ruff.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  code_quality.yml  documentation.yml
docs/: conf.py  connection_pooling.rst  index.rst  quickstart.rst  reference.rst
open_api_framework/: __init__.py  admin.py  context_processors.py  utils.py
open_api_framework/conf/: base.py  utils.py
open_api_framework/management/commands/: generate_envvar_docs.py  generate_setup_config_docs.py
open_api_framework/static/open_api_framework/css/: admin.css
open_api_framework/templates/admin/: base_site.html
open_api_framework/templates/open_api_framework/: env_config.rst  setup_config.rst  setup_configuration.rst
open_api_framework/templates/open_api_framework/admin/: base_site.html
open_api_framework/templates/open_api_framework/components/: setup_config_step.rst
open_api_framework/templatetags/: doc_tags.py
reports/: envvar_matrix.csv
testapp/: settings.py  urls.py  views.py
tests/: conftest.py  factories.py  test_admin.py  test_config_helpers.py  test_csp.py  test_generate_envvar_docs.py  test_settings.py
tests/__snapshot_extras__/: test_generate_envvar_docs.ambr
tests/__snapshot_no_extras__/: test_generate_envvar_docs.ambr
