# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = open_api_framework
version = 0.1.0
description = TODO
long_description = file: README.rst
url = https://github.com/maykinmedia/open_api_framework
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = TODO
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Core python libraries
    glom # data represenation based on spec
    Pillow  # handle images
    psycopg2  # database driver
    pytz  # handle timezones
    python-dotenv  # environment variables for secrets
    python-decouple  # processing of envvar configs
    jsonschema

    # Framework libraries
    django < 3.0
    django-admin-index
    django-axes
    django-choices
    django-hijack
    django-hijack-admin
    django-redis
    django-rosetta
    django-sniplates
    maykin-django-two-factor-auth
    maykin-django-two-factor-auth[phonenumbers]
    mozilla-django-oidc-db

    # API libraries
    djangorestframework
    djangorestframework-gis
    # django-extra-fields
    django-filter
    drf-spectacular  # api documentation

    # WSGI servers & monitoring - production oriented
    uwsgi
    sentry-sdk  # error monitoring
    elastic-apm  # Elastic APM integration

    # Common ground libraries
    vng_api_common[markdown_docs]>=1.6.4
    zgw-consumers  # external api auths
tests_require =
    pytest
    pytest-django
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    open_api_framework
    open_api_framework.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=open_api_framework
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
