# setuptools config
# see http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = open_api_framework
version = 0.1.0
description = TODO
long_description = file: README.rst
url = https://github.com/maykinmedia/open_api_framework
license = MIT
author = Maykin Media
author_email = support@maykinmedia.nl
keywords = TODO
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # Core python libraries
    glom>=20.11.0 # data represenation based on spec
    Pillow>=9.0.1  # handle images
    psycopg2>=2.8.6  # database driver
    pytz>=2021.1  # handle timezones
    python-dotenv>=0.17.0  # environment variables for secrets
    python-decouple>=3.4  # processing of envvar configs
    jsonschema>=3.2.0

    # Framework libraries
    django>=3.2.23
    django-admin-index>=3.0.0
    django-axes>=5.14.0
    django-choices>=1.7.1
    django-hijack>=3.4.5
    django-redis>=4.12.1
    django-rosetta>=0.9.6
    django-sniplates>=0.7.0
    maykin-django-two-factor-auth[phonenumbers]>=2.0.4
    mozilla-django-oidc-db>=0.7.2
    sharing-configs>=0.1.2

    # API libraries
    djangorestframework>=3.12.4
    djangorestframework-gis>=0.17
    # django-extra-fields
    django-filter>=2.4.0
    drf-nested-routers>=0.93.3
    drf-spectacular>=0.16.0  # api documentation

    # WSGI servers & monitoring - production oriented
    uwsgi>=2.0.21
    sentry-sdk>=1.0.0  # error monitoring
    elastic-apm>=6.1.1  # Elastic APM integration

    # Common ground libraries
    commonground-api-common[markdown_docs]>=1.12.1
    zgw-consumers>=0.20.0  # external api auths
tests_require =
    pytest
    pytest-django
    tox
    isort
    black
    flake8

[options.packages.find]
include =
    open_api_framework
    open_api_framework.*

[options.extras_require]
tests =
    pytest
    pytest-django
    tox
    isort
    black
    flake8
pep8 = flake8
coverage = pytest-cov
docs =
    sphinx
    sphinx-rtd-theme
release =
    bumpversion
    twine

# 3rd party configuration

[aliases]
test=pytest

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 88
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
skip = env,.tox,.history,.eggs
known_django=django
known_first_party=open_api_framework
sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER

[tool:pytest]
testpaths = tests
DJANGO_SETTINGS_MODULE=testapp.settings

[pep8]
[flake8]
max-line-length=88
exclude=env,.tox,doc
